style: adaptive font size and fix dark mode

--- a/src/app/(user)/globals.css
+++ b/src/app/(user)/globals.css
@@ -8,6 +8,7 @@
     }
     body {
         @apply dark:bg-gray-800 bg-slate-600;
+        font-size: calc(15px + 0.390625vw);
     }
 }
 
