--- a/src/app/(user)/post/[id]/code-block.css
+++ b/src/app/(user)/post/[id]/code-block.css
@@ -3,3 +3,7 @@ pre.ql-syntax {
     background-color: rgb(30 41 59);
     color: white;
 }
+
+.ql-align-justify {
+    text-align: justify;
+}
